Fixed the problem with long names in candidate cards being cut off. A few minor css tweaks and some home page copy fixes.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -176,6 +176,13 @@ p.article_notice
   margin-bottom: 20px
   margin-top: -10px
     
+.politicians, .unshuffled_politicians
+  .politician
+    p.name
+      position: absolute
+    .election_website, .website
+      margin-top: 3em
+
 
 .politicians, .incumbents, .parties, .unshuffled_politicians
   .politician, .party
@@ -244,7 +251,7 @@ p.article_notice
 
 .incumbents, .politicians, .unshuffled_politicians
   .show_constituency
-    min-height: 213px
+    min-height: 208px
     .constituency
       margin-top: 10px
       a
